tests/golden/monitoring/monitoring/monitoring/test-instance-02/NetworkPolicy-test-instance-02.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-instance-02
  namespace: test-instance-02
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: test-instance-02
