tests/golden/monitoring/monitoring/monitoring/test-instance-02/RedisProvider-test-instance-02.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: RedisProvider
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: test-instance-02
  namespace: test-instance-02
