tests/golden/monitoring/monitoring/monitoring/test-instance-02/SessionHandling-test-instance-02.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: SessionHandling
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: test-instance-02
  namespace: test-instance-02
spec:
  persistence:
    redisProviderRef:
      name: test-instance-02
